# v4l2rtspserver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  copy_so.bash  install_manifest.txt  main.cpp  test.264  test.info  v4l2rtspserver  v4l2rtspserver-Linux-x86_64-Release.deb
_CPack_Packages/Linux-x86_64-Release/DEB/: v4l2rtspserver-6b8011d-dirty-Linux-x86_64-Release.deb
_CPack_Packages/Linux-x86_64-Release/DEB/v4l2rtspserver-6b8011d-dirty-Linux-x86_64-Release/: control  md5sums
copy/: libasn1.so.8  libcurl-gnutls.so.4  libexif.so.12  libgssapi.so.3  libhx509.so.5  libkrb5.so.26  libmysqlclient.so.20  libpoppler.so.73  libpq.so.5  libredis++.so.1  liburiparser.so.1  libwind.so.0  v4l2rtspserver
doc/: b_txt_reader.cpp  ffmpeg.md  h264.md  info.txt  ros.md  test.cpp
inc/: BaseServerMediaSubsession.h
jpeg/: jpeg.h
lib/: libhiredis.so.1.0.3-dev
libv4l2cpp/: CMakeLists.txt
libv4l2cpp/inc/: Utils.hpp  UtilsFile.hpp  V4l2Device.h  V4l2MmapDevice.h  V4l2ReadWriteDevice.h
libv4l2cpp/jpg/inc/: yuv_to_jpg.h
libv4l2cpp/jpg/src/: yuv_to_jpg.cpp
libv4l2cpp/src/: 1  V4l2Device.cpp  V4l2MmapDevice.cpp  V4l2ReadWriteDevice.cpp  yuv_to_jpg.c
libv4l2cpp/x264/inc/: x264_encoder.h
libv4l2cpp/x264/src/: x264_encoder.cpp
opencv/: cvtest.cpp  cvtest2  img  img2video.cpp  opencv.md
src/: ServerMediaSubsession.cpp  V4L2DeviceSource.cpp  jpeg2.cpp  note.txt  x264_encoder.cpp  x264_encoder_.cpp
tools/: b_txt_reader.cpp
x264/inc/: x264_.h  x264_encoder.h
(+1 files in other folders)
